	Fixed libldap MozNSS with CACertDir (ITS#6975)
	Fixed libldap MozNSS with PR_SetEnv (ITS#6862)
	Fixed libldap descriptor leak (ITS#6929)
	Fixed libldap socket leak (ITS#6930)
	Fixed libldap get option crash (ITS#6931)
	Fixed libldap lockup (ITS#6898)
	Fixed libldap ASYNC TLS setup (ITS#6828)
	Fixed libldap with missing \n terminations (ITS#6947)
	Fixed tools double free (ITS#6946)
	Fixed ldapmodify SEGV on invalid LDIF (ITS#6978)
	Added slapd extra_attrs database option (ITS#6513)
	Fixed slapd asserts (ITS#6932)
	Fixed slapd configfile param on windows (ITS#6933)
	Fixed slapd config with global chaining (ITS#6843)
	Fixed slapd uninitialized variables (ITS#6935)
	Fixed slapd config objectclass is readonly (ITS#6963)
	Fixed slapd entry response with control (ITS#6899)
	Fixed slapd with unknown attrs (ITS#6819)
	Fixed slapd normalization of schema RDN (ITS#6967)
	Fixed slapd operations cache to 10 op limit (ITS#6944)
	Fixed slapd syncrepl crash with non-replicated ops (ITS#6892)
	Fixed slapd-bdb/hdb with sparse index ranges (ITS#6961)
	Fixed slapd-monitor stray code cleanup (ITS#6974)
	Fixed back-ldap ppolicy updates (ITS#6711)
	Fixed back-ldap with id-assert (ITS#6817)
	Fixed slapd-meta reentry issues (ITS#6909)
	Fixed slapd-sql length of data type (ITS#6657,ITS#6691)
	Added slapo-accesslog filter matching (ITS#6815)
	Fixed slapo-accesslog with invalid attrs (ITS#6819)
	Added slapo-auditlog connID and peername logging (ITS#6936)
	Fixed slapo-memberof with accesslog (ITS#6329,ITS#6766,ITS#6915)
	Fixed slapo-pcache with unknown attrs (ITS#6823)
	Fixed slapo-pcache with '1.1', '+', and '*' attrs (ITS#6950)
	Fixed slapo-pcache buffersize issues (ITS#6951)
	Fixed slapo-pcache refresh (ITS#6953)
	Fixed slapo-pcache with pCacheBind (ITS#6954)
	Fixed slapo-pcache database corruption (ITS#6831)
	Fixed slapo-rwm with attributes with no equality rule (ITS#6943)
	Fixed slapo-sssvlv limits check when global (ITS#6973)
	Fixed slapo-syncprov with replicated subtrees (ITS#6872)