@@ -11,6 +11,7 @@ OpenLDAP 2.4.26 Engineering
 	Fixed libldap ASYNC TLS setup (ITS#6828)
 	Fixed libldap with missing \n terminations (ITS#6947)
 	Fixed tools double free (ITS#6946)
+	Fixed tools verbose output (ITS#6977)
 	Fixed ldapmodify SEGV on invalid LDIF (ITS#6978)
 	Added slapd extra_attrs database option (ITS#6513)
 	Fixed slapd asserts (ITS#6932)
